[package]
name = "anodize"
version = "0.1.0"
authors = ["Grant Iraci <grantira@buffalo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
bench = false

[dependencies]
frunk = "0.3.1"
lazy_static = "1.4.0"
once_cell = "1.4.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
