[package]
name = "phantom_groups"
version = "0.1.0"
authors = ["Grant Iraci <grantira@buffalo.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]
path = "src/thread_group.rs"
bench = false

[dependencies]
frunk = "0.3.1"
lazy_static = "1.4.0"
once_cell = "1.4.0"
