[package]
name = "MCsystem"
version = "0.1.0"
authors = ["Sofiya Semenova <novasofiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anodize = { path = "../../anodize" }
visodom = {path = "../visodom"}
image = "0.19" # Encoding/decoding images in Rust.
nalgebra = "0.17" # Linear algebra.
